Se quiser ver o que mudou, da uma olhada no commit :D

--- a/src/main/resources/templates/cadastrarLoja.html
+++ b/src/main/resources/templates/cadastrarLoja.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-    <form action="cadastrar" method ="post">
+    <form action="/loja/cadastrar" method = "post">
             
             <h1> Cadastro Loja </h1>
             <div> Id: <input type= "number" name="id"> </div>
@@ -15,8 +15,6 @@
             <div> CPF/Cnpj: <input type= "text" name="cpfCnpj"> </div>
             <div> Telefone: <input type= "text" name="telefone"> </div> 
             <div> Email: <input type= "text" name="email"> </div>
-            
-            
             <div> <input type="submit"  value="Enviar" > </div>
             
     </form>
