--- a/src/main/resources/templates/cliente/exibir.html
+++ b/src/main/resources/templates/cliente/exibir.html
@@ -15,14 +15,14 @@
         <div>
             <h2>Detalhes do Cliente <label th:text="${cliente.nome}"></label></h2>
             <table>
-                <tr><th>ID: </th><th th:text="${cliente.cpfCnpj}"></th></tr>
+                <tr><th>CPF/CNPJ: </th><th th:text="${cliente.cpfCnpj}"></th></tr>
                 <tr><th>Nome: </th><th th:text="${cliente.nome}"></th></tr>
-                <tr><th>Vendas: </th><th th:text="${cliente.vendas.size()}"></th></tr>
+                <tr><th>Compras: </th><th th:text="${cliente.vendas.size()}"></th></tr>
             </table>
         </div>
         
         <div th:if="${not #lists.isEmpty(cliente.vendas)}">
-            <h2>Vendas do Cliente</h2>
+            <h2>Compras do Cliente:</h2>
             <table>
                 <tr>
                     <th>Preço</th>
@@ -33,10 +33,7 @@
                 <tr th:each="venda : ${cliente.vendas}">
                     <th th:text="${venda.valor}"></th>
                     <th th:text="${venda.usuario.nome}"></th>
-                    <th>
-                        <a th:href="${'/venda/fical/' + venda.id}">Nota Fiscal</a>
-                        <a th:href="${'/venda/editar/' + venda.id}">Editar</a>
-                    </th>
+                    <th><a th:href="${'/venda/editar/' + venda.id}">Detalhes</a></th>
                 </tr>
             </table>
         </div>
